--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^0.21.1"
   },
   "scripts": {
-    "start:db": "json-server -v db.json",
+    "start:db": "json-server -w db.json",
     "start:parcel": "parcel index.html"
   }
 }
